<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:orientation="vertical"
    android:background="@drawable/shape_card">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_entry_qns"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/lexend_medium"/>

    <TextView
        android:id="@+id/disc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/are_you_sure_you_want_to_delete_this_entry_this_can_t_e_undone"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:alpha=".7"
        android:fontFamily="@font/lexend_regular"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yesBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/shape_button_border"
            android:text="@string/yes_delete"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:fontFamily="@font/lexend_medium"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/noBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/shape_button"
            android:text="@string/no"
            android:textColor="@color/background"
            android:fontFamily="@font/lexend_medium"/>
    </LinearLayout>

</LinearLayout>