<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_card"
    android:backgroundTint="@color/black"
    android:orientation="vertical"
    android:padding="15dp"
    android:windowSoftInputMode="adjustResize"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/lexend_regular"
            android:text="@string/actions"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfer_entry"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:fontFamily="@font/lexend_regular"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/moveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_move"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/move_entry"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/lexend_medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entry_will_be_moved_to_other_book"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:fontFamily="@font/lexend_light"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/copyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_copy_opposite"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copy_entry"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/lexend_medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entry_will_stay_in_both_books"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:fontFamily="@font/lexend_light"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/copyOP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_copy_a"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copy_opposite_entry"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/lexend_medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cash_in_entry_will_be_added_as_cash_out_entry_in_other_book_and_vice_versa"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:fontFamily="@font/lexend_light"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/deleteEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            app:tint="#C23025" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_entry"
                android:textSize="16sp"
                android:textColor="#C23025"
                android:fontFamily="@font/lexend_medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entry_will_get_deleted_permanently_there_is_no_way_to_recover"
                android:textSize="12sp"
                android:textColor="#C23025"
                android:fontFamily="@font/lexend_light"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>