<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_medium"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha=".5"
                android:fontFamily="@font/lexend_regular"
                android:text="@string/login_to_auto_backup_your_data_securely"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txt_mobile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:singleLine="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/shape_textbox"
                android:fontFamily="@font/lexend_regular"
                android:hint="@string/enter_mobile_number"
                android:paddingStart="15dp"
                android:textSize="16sp"
                android:paddingEnd="15dp"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sendOtp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_button"
                android:fontFamily="@font/lexend_medium"
                android:text="@string/send_otp"
                android:textColor="@color/background" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:alpha=".5"
                android:fontFamily="@font/lexend_regular"
                android:text="@string/by_creating_an_account_you_agree_to_our_terms_of_services_amp_privacy_policy"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>